# crust-ml

./: .gitignore  README.md  grammar.bnf
Compiler/: Makefile  a.out  ast.mli  compile.ml  crust.ml  dune  interp.ml  lexer.mll  merlin-init.sh  ownership.ml  parser.mly  past.mli  pre_compile.ml  pre_compile.mli  pre_compile2.ml  pre_compile_old.ml  pre_compile_old.txt  printer.ml  printer_past.ml  printer_tast.ml  run-tests  run-tests_c  tast.mli  tokens.mly  typing.ml  x86_64.ml  x86_64.mli
Compiler/tests/: LISEZMOI  README.md  Readme.md  run-bad-test  run-test  run-tests  test.rs  test.s  test.sh
Compiler/tests/bad/Comments/: 02_comment.rs
Compiler/tests/bad/Functions/: 01_function.rs  02_function.rs  03_function.rs  04_function.rs  05_function.rs  06_function.rs  07_function.rs
Compiler/tests/bad/Ifs/: 01_ifs.rs  02_ifs.rs  03_ifs.rs  04_ifs.rs  05_ifs.rs  06_ifs.rs
Compiler/tests/bad/Loops/: 01_loops.rs  02_loops.rs  03_loops.rs  04_loop.rs
Compiler/tests/bad/Output/: 01_output.rs  02_output.rs  03_output.rs  04_output.rs  05_output.rs  (+1 more)
Compiler/tests/exec/: abr.out  abr.rs  arith.rs  bool.out  bool.rs  borrow.out  borrow.rs  fact_imp.out  fact_imp.rs  fact_rec.rs  hello_world.rs  lists.out  lists.rs  mandelbrot.rs  pascal.rs  print1.rs  print2.out  print2.rs  print_int.out  print_int.rs  return.out  return.rs  strings.out  strings.rs  struct.out  struct.rs  struct2.out  struct2.rs  struct3.rs  struct4.out  struct4.rs  swap.rs  vec.out  vec.rs
Compiler/tests/exec-fail/: division_by_zero1.rs  division_by_zero2.rs  out_of_bounds1.rs  out_of_bounds2.rs
(+216 files in other folders)
